# zelibot

./: .envrc  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  LICENSE  Makefile  build.sh  docker-compose.yml  readme.md
.github/workflows/: build.yml  pre-commit-check.yml
docs/: readme.md
src/: main.cpp
src/class/: config_manager.cpp  db_manager.cpp  zelibot.cpp
src/includes/: config_manager.hpp  db_manager.hpp  defs.hpp  types.hpp  zelibot.hpp
